Fixed calendar and event spacing

--- a/client/src/pages/CalendarPage.scss
+++ b/client/src/pages/CalendarPage.scss
@@ -17,8 +17,9 @@
     }
 
     .calendar{
+        padding-top: 20px;
         height: 100%;
-        width: 100%;
+        width: 95%;
         //border: green;
         //border-radius: 2px;
     }
